--- a/TestProject/Views/Products/Index.cshtml
+++ b/TestProject/Views/Products/Index.cshtml
@@ -21,6 +21,7 @@
             <th scope="col">
                 @Html.DisplayNameFor(model => model.Price)
             </th>
+            <th> VAT</th>
             <th></th>
         </tr>
     </thead>
@@ -37,7 +38,10 @@
                 @Html.DisplayFor(modelItem => item.Price)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.Id"  class="btn btn-info" >Edit</a> |
+                @Html.DisplayFor(modelItem => item.TotalPriceWithVAT)
+            </td>
+            <td>
+                <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-info">Edit</a> |
                 <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-secondary">Details</a> |
                 <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-danger">Delete</a>
             </td>
