--- a/TestProject/Views/Account/Register.cshtml
+++ b/TestProject/Views/Account/Register.cshtml
@@ -5,7 +5,7 @@
 
 <h1>User Registration</h1>
 
-<form asp-controller="User" asp-action="Register" method="post">
+<form asp-controller="Account" asp-action="Register" method="post">
     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
     <div class="form-group">
         <label asp-for="Name"></label>
@@ -17,18 +17,18 @@
         <input asp-for="Email" class="form-control" />
         <span asp-validation-for="Email" class="text-danger"></span>
     </div>
-    
+
     <div class="form-group">
         <label asp-for="Password"></label>
         <input asp-for="Password" class="form-control" type="password" />
         <span asp-validation-for="Password" class="text-danger"></span>
     </div>
-    
+
     <div class="form-group">
         <label asp-for="ConfirmPassword"></label>
         <input asp-for="ConfirmPassword" class="form-control" type="password" />
         <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
     </div>
-    
-    <button asp-controller="User" asp-action="Register" type="submit" class="btn btn-primary">Register</button>
+    <p class="my-3">You have not accaunt? <a href="@Url.Action("Login", "Account")">Login</a></p>
+    <button asp-controller="Account" asp-action="Register" type="submit" class="btn btn-primary my-3">Register</button>
 </form>
