--- a/TestProject/Views/Account/RegisterAdmin.cshtml
+++ b/TestProject/Views/Account/RegisterAdmin.cshtml
@@ -5,7 +5,7 @@
 
 <h1>Admin Registration</h1>
 
-<form asp-controller="User" asp-action="RegisterAdmin" method="post">
+<form asp-controller="Account" asp-action="RegisterAdmin" method="post">
     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
     <div class="form-group">
         <label asp-for="Name"></label>
@@ -29,6 +29,6 @@
         <input asp-for="ConfirmPassword" class="form-control" type="password" />
         <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
     </div>
-
-    <button asp-controller="User" asp-action="RegisterAdmin" type="submit" class="btn btn-primary">Register as Admin</button>
+    <p class="my-3">You have not accaunt? <a href="@Url.Action("Login", "Account")">Login</a></p>
+    <button asp-controller="Account" asp-action="RegisterAdmin" type="submit" class="btn btn-primary my-3">Register as Admin</button>
 </form>
