--- a/TestProject/Views/Products/Index.cshtml
+++ b/TestProject/Views/Products/Index.cshtml
@@ -5,16 +5,19 @@
 }
 
 <h1>Products</h1>
+@if (User.Identity.IsAuthenticated && User.IsInRole("ADMIN"))
+{
+    <p>
+        <a asp-action="Create" class="btn btn-primary">Create New</a>
+    </p>
+}
 
-<p>
-    <a asp-action="Create"  class="btn btn-primary" >Create New</a>
-</p>
 <table class="table  table-bordered table-hover">
     <thead class="thead-dark">
         <tr>
             <th scope="col">
                 @Html.DisplayNameFor(model => model.Title)
-            </th >
+            </th>
             <th scope="col">
                 @Html.DisplayNameFor(model => model.Quantity)
             </th>
@@ -22,30 +25,37 @@
                 @Html.DisplayNameFor(model => model.Price)
             </th>
             <th> VAT</th>
-            <th></th>
+            @if (User.Identity.IsAuthenticated && User.IsInRole("ADMIN"))
+            {
+                <th></th>
+            }
         </tr>
     </thead>
     <tbody>
-    @foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Title)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Quantity)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Price)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.TotalPriceWithVAT)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-info">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-secondary">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-danger">Delete</a>
-            </td>
-        </tr>
-}
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Title)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Quantity)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Price)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.TotalPriceWithVAT)
+                </td>
+                @if (User.Identity.IsAuthenticated && User.IsInRole("ADMIN"))
+                {
+                    <td>
+                        <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-info">Edit</a> |
+                        <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-secondary">Details</a> |
+                        <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-danger">Delete</a>
+                    </td>
+                }
+            </tr>
+        }
     </tbody>
 </table>
