--- a/TestProject/Views/Shared/_Layout.cshtml
+++ b/TestProject/Views/Shared/_Layout.cshtml
@@ -9,7 +9,31 @@
     <link rel="stylesheet" href="~/TestProject.styles.css" asp-append-version="true" />
 </head>
 <body>
-    <div class="container">
+    @if (User.Identity.IsAuthenticated)
+    {
+        <nav class="navbar navbar-expand-lg navbar-light">
+            <div class="container-fluid">
+                <a class="navbar-brand fw-bold" href="#">Command Work</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link " aria-current="page" href="@Url.Action("Index", "Home")">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="@Url.Action("Index", "Products")">Products</a>
+                        </li>
+
+                    </ul>
+                    <a class="btn btn-outline-dark fw-bold" href="@Url.Action("Logout", "Account")">Logout</a>
+                </div>
+            </div>
+        </nav>
+
+    }
+    <div class="container mt-4">
         <main role="main" class="pb-3">
             @RenderBody()
         </main>
@@ -18,5 +42,6 @@
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
     @await RenderSectionAsync("Scripts", required: false)
+    @await Component.InvokeAsync("NToastNotify")
 </body>
 </html>
