--- a/TestProject/Views/Account/Login.cshtml
+++ b/TestProject/Views/Account/Login.cshtml
@@ -9,7 +9,7 @@
     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
     <div class="form-group">
         <label asp-for="Email"></label>
-        <input asp-for="Email" class="form-control" />
+        <input asp-for="Email" class="form-control" type="text" />
         <span asp-validation-for="Email" class="text-danger"></span>
     </div>
 
