--- a/TestProject/Views/Account/Register.cshtml
+++ b/TestProject/Views/Account/Register.cshtml
@@ -14,7 +14,7 @@
     </div>
     <div class="form-group">
         <label asp-for="Email"></label>
-        <input asp-for="Email" class="form-control" />
+        <input asp-for="Email" class="form-control" type="text" />
         <span asp-validation-for="Email" class="text-danger"></span>
     </div>
 
