--- a/TestProject/Views/Products/Index.cshtml
+++ b/TestProject/Views/Products/Index.cshtml
@@ -52,7 +52,7 @@
                     <td>
                         <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-info">Edit</a> |
                         <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-secondary">Details</a> |
-                        <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-danger">Delete</a>
+                        <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-danger">Delete</a> |
                     </td>
                 }
             </tr>
