--- a/TestProject/Views/Products/Index.cshtml
+++ b/TestProject/Views/Products/Index.cshtml
@@ -12,7 +12,7 @@
     <button class="btn btn-info" onclick="location.pathname = 'swagger'">Swagger</button>
 }
 
-<table class="table  table-bordered table-hover">
+<table class="table  table-bordered table-hover my-2">
     <thead class="thead-dark">
         <tr>
             <th scope="col">
