--- a/TestProject/Views/Products/Edit.cshtml
+++ b/TestProject/Views/Products/Edit.cshtml
@@ -29,7 +29,7 @@
                 <span asp-validation-for="Price" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <input type="submit" value="Save" class="btn btn-primary my-2" />
             </div>
         </form>
     </div>
