--- a/TestProject/wwwroot/css/site.css
+++ b/TestProject/wwwroot/css/site.css
@@ -50,3 +50,10 @@ body {
             color: gray;
         }
 }
+.audit-filter-form{
+    > form {
+               display:flex;
+               align-items:center;
+               gap:20px;
+           }
+}
