--- a/TestProject/Views/AuditView/Index.cshtml
+++ b/TestProject/Views/AuditView/Index.cshtml
@@ -59,7 +59,7 @@
         {
             <tr>
                 <td>
-                    The Audit not found
+                     Audit not found
                 </td>
             </tr>
         }
