vat Calculate change full

--- a/TestProject/Views/Products/Index.cshtml
+++ b/TestProject/Views/Products/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<TestProject.Domains.Product>
+﻿@model IEnumerable<TestProject.ViewModels.ProductViewModel>
 
 @{
     ViewData["Title"] = "Index";
